Fix text alignment issues on Windows (webfonts rebuilt with line height = Bounding box)

--- a/client/app/styles/buttons.less
+++ b/client/app/styles/buttons.less
@@ -15,4 +15,5 @@
   font-size: 32px;
   line-height: 1;
   padding: 4px 14px;
+  padding-top: 5px;
 }
