--- a/client/app/styles/footer.less
+++ b/client/app/styles/footer.less
@@ -74,7 +74,7 @@
       font-family: @brand-light-font;
       font-weight: light;
       font-size: 22px;
-      line-height: 24px;
+      line-height: 1;
       color: @brand-secondary;
 
       &:hover,
