--- a/client/app/styles/platform.less
+++ b/client/app/styles/platform.less
@@ -168,6 +168,7 @@
       font-size: 24px;
       line-height: 24px;
       text-align: center;
+      margin-top: 10px;
       margin-bottom: 40px;
       color: @brand-secondary;
     }
